Fixed UI and added collapsible for configuration and user entry